--- a/src/styles/onboarding.module.scss
+++ b/src/styles/onboarding.module.scss
@@ -90,7 +90,7 @@
         }
       }
 
-      .wordCount {
+      .characterCount {
         position: absolute;
         font-size: 1.4rem;
         color: mixin.$faded;
